--- a/CJTechShow/Client/Shared/LoginDisplay.razor
+++ b/CJTechShow/Client/Shared/LoginDisplay.razor
@@ -4,16 +4,34 @@
 
 <AuthorizeView>
     <Authorized>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="authentication/profile" Match="NavLinkMatch.All">
+                <span class="oi oi-person" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="#" @onclick="BeginLogOut" Match="NavLinkMatch.All">
+                <span class="oi oi-account-logout" aria-hidden="true"></span> Log out
+            </NavLink>
+        </div>
         <a href="authentication/profile">Hello, @context.User.Identity?.Name!</a>
         <button class="nav-link btn btn-link" @onclick="BeginLogOut">Log out</button>
     </Authorized>
     <NotAuthorized>
-        <a href="authentication/register">Register</a>
-        <a href="authentication/login">Log in</a>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="authentication/register" Match="NavLinkMatch.All">
+                <span class="oi oi-person" aria-hidden="true"></span> Register
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="authentication/login" Match="NavLinkMatch.All">
+                <span class="oi oi-account-logout" aria-hidden="true"></span> Log in
+            </NavLink>
+        </div>
     </NotAuthorized>
 </AuthorizeView>
 
-@code{
+@code {
     private void BeginLogOut()
     {
         Navigation.NavigateToLogout("authentication/logout");
