EBrochure(Rename) and Redirect To Login Changes

--- a/CJTechShow/Client/Shared/Ebrochure.razor
+++ b/CJTechShow/Client/Shared/Ebrochure.razor
@@ -3,10 +3,10 @@
     <strong>@Title</strong>
 
     <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2186157">brief survey</a>
+        Please download our
+        <a target="_blank" class="font-weight-bold link-dark" href="https://drive.google.com/file/d/1mQp0hx8JH7mrlxgRhq-ru7IZfLal7w8u/view?usp=sharing">e brochure</a>
     </span>
-    and tell us what you think.
+    and see you guys there!
 </div>
 
 @code {
