--- a/CJTechShow/Client/_Imports.razor
+++ b/CJTechShow/Client/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using CJTechShow.Client
-@using CJTechShow.Client.Shared
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
