Changes Too Many Fixed MetaData somehow

--- a/CJTechShow/Client/Pages/AboutUs.razor
+++ b/CJTechShow/Client/Pages/AboutUs.razor
@@ -1,4 +1,4 @@
-﻿@page "/Aboutus/"
+﻿@page "/AboutUs/"
 @inject HttpClient _client
 @attribute [Authorize]
 <h3 class="card-title">Company Story</h3>
