--- a/CJTechShow/Client/Pages/HomePage.razor
+++ b/CJTechShow/Client/Pages/HomePage.razor
@@ -33,7 +33,7 @@
 The TECH Show 2023 is back! With more than 150 brands ranging from tech gadgets, smart-home must-haves & lifestyle products,
 get ready to unlock unbelievable 11.11 deals offline where you can touch, feel & get expert advice live in person.yes
 
-<SurveyPrompt Title="Download your E-Brochure Now!" />
+<Ebrochure Title="Download your E-Brochure Now!" />
 
 <h2 class="pass-info">Visitor Passes</h2>
 <p class="pass-info">
