--- a/CJTechShow/Client/App.razor
+++ b/CJTechShow/Client/App.razor
@@ -1,3 +1,4 @@
+﻿@using CJTechShow.Client.Shared;
 ﻿<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
