Create Sponsor Page

--- a/CJTechShow/Client/Pages/Sponsor.razor
+++ b/CJTechShow/Client/Pages/Sponsor.razor
@@ -1,5 +1,4 @@
-﻿@page "/About Us/"
-@inject HttpClient _client
+﻿@inject HttpClient _client
 @attribute [Authorize]
 <h3 class="card-title">Company Story</h3>
 <p>
@@ -22,5 +21,3 @@
 </p>
 
 <br />
-
-
