--- a/CJTechShow/Client/Shared/NavMenu.razor
+++ b/CJTechShow/Client/Shared/NavMenu.razor
@@ -48,7 +48,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="about us">
+            <NavLink class="nav-link" href="About Us">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> About Us
             </NavLink>
         </div>
