Last Few Changes for Sponsor Page

--- a/CJTechShow/Client/Pages/Sponsor.razor
+++ b/CJTechShow/Client/Pages/Sponsor.razor
@@ -1,23 +1,21 @@
-﻿@inject HttpClient _client
+﻿@page "/Sponsor/"
+@inject HttpClient _client
 @attribute [Authorize]
-<h3 class="card-title">Company Story</h3>
+<h3 class="card-title">Sponsor</h3>
 <p>
-    With the aim of creating Singapore's most extensive and immersive consumer lifestyle marketplaces,
-    Chris and Jet's management of the CJ Tech Show brings together top brands and innovators for a dynamic and diverse product showcase held quarterly.
-    Each event is carefully curated, providing consumers with the opportunity to explore the latest trends and products in consumer technology while enjoying exceptional deals.
-    The series includes flagship events like COMEX and ITSHOW, along with The Tech Show and Consumer Electronics Exhibition (CEE).
+ <img src='/MrKumbar.jpg' />
 </p>
-<div style="margin-bottom: 20px;"></div>
-<h3 class="card-title">Company Motto</h3>
 <p>
-    At CJ Event, our mission is to simplify and enhance the event registration process, creating a platform where vendors and organizers can effortlessly connect, collaborate, and bring outstanding events to life.
-    We strive to be the catalyst for meaningful interactions, innovations, and successful collaborations within the dynamic landscape of tech shows.
-    Join Us in Shaping the Future
-
-
-    Whether you're a tech innovator eager to showcase your latest products or an event organizer seeking a reliable partner, CJ Event invites you to join us in shaping the future of event experiences.
-    Let's collaborate, innovate, and create memorable events together!hhhh
-
+ <img src='/DreamCore SG.jpg' />
+</p>
+<p>
+    <img src='/Onyx Pc Technology.jpg' />
+</p>
+<p>
+    <img src='/TradePac.jpg'
+</p>
+<p>
+    <img src='/SecretLab.jpg'
 </p>
 
 <br />
