--- a/CJTechShow/Client/Shared/NavMenu.razor
+++ b/CJTechShow/Client/Shared/NavMenu.razor
@@ -34,6 +34,7 @@
                         <span class="oi oi-account-logout" aria-hidden="true"></span> Log in
                     </NavLink>
                 </div>
+
             </NotAuthorized>
         </AuthorizeView>
         <div class="nav-item px-3">
@@ -50,6 +51,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="About Us">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> About Us
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Sponsor">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Sponsors
             </NavLink>
         </div>
 
