Updated Visitor and Vendor Passes, Purchased Overview, and Sponsers Aligned Photos

--- a/CJTechShow/Client/Pages/HomePage.razor
+++ b/CJTechShow/Client/Pages/HomePage.razor
@@ -16,7 +16,7 @@
         font-size: 16px;
         padding: 10px 20px;
         background-color: #4CAF50;
-        color: white;
+        color: darkred;
         border: none;
         border-radius: 5px;
         cursor: pointer;
@@ -58,4 +58,7 @@ get ready to unlock unbelievable 11.11 deals offline where you can touch, feel &
 </ul>
 
 <!-- "Buy Tickets" button -->
-<button class="buy-tickets-button" onclick="location.href='/buy-tickets'">Buy Tickets</button>
+
+<button onclick="window.location.href = 'https://localhost:7084/BuyVendorTicket';">Buy Vendor Passes</button>
+<button onclick="window.location.href = 'https://localhost:7084/BuyTicket';">Buy Visitor Passes</button>
+
