--- a/CJTechShow/Client/Pages/EventInfo.razor
+++ b/CJTechShow/Client/Pages/EventInfo.razor
@@ -1,4 +1,4 @@
-﻿@page "/event information/"
+﻿@page "/eventinformation/"
 @inject HttpClient _client
 @inject IJSRuntime js
 @attribute [Authorize]
@@ -30,13 +30,6 @@
     <li>Tech Showcases</li>
 </ul>
 
-<!-- Registration -->
-<h4>Registration</h4>
-<p>
-    Secure your spot at the IT Tech Show by registering today! Don't miss out on this unparalleled opportunity to be at the forefront of technological innovation.
-</p>
-<button class="btn btn-primary">Register Now</button>
-
 <!-- COVID-19 Safety Measures -->
 <h4>COVID-19 Safety Measures</h4>
 <p>
@@ -58,10 +51,24 @@
 <p>
     Stay updated on the latest event news and announcements by following us on social media:
 </p>
-<button class="btn btn-primary">Facebook</button>
-<button class="btn btn-primary">Twitter</button>
-<button class="btn btn-primary">TikTok</button>
-<button class="btn btn-primary">Instagram</button>
+<button class="btn btn-primary" onclick="redirectToTwitter()">Twitter</button>
+<button class="btn btn-primary" onclick="redirectToTikTok()">TikTok</button>
+<button class="btn btn-primary" onclick="redirectToInstagram()">Instagram</button>
+
+<script>
+    function redirectToTwitter() {
+        window.location.href = 'https://twitter.com/CJTechShow';
+    }
+
+    function redirectToTikTok() {
+        window.location.href = 'https://www.tiktok.com/cjtechshow?lang=en';
+    }
+
+    function redirectToInstagram() {
+        window.location.href = 'https://www.instagram.com/cjtechshow/';
+    }
+</script>
+
 
 <br />
 
