--- a/CJTechShow/Client/Shared/NavMenu.razor
+++ b/CJTechShow/Client/Shared/NavMenu.razor
@@ -58,6 +58,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Sponsors
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Buy Visitor Ticket">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Buy Visitor Tickets
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Buy Vendor Ticket">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Buy Vendor Tickets
+            </NavLink>
+        </div>
 
     </nav>
 </div>
