--- a/CJTechShow/Client/Pages/EventInfo.razor
+++ b/CJTechShow/Client/Pages/EventInfo.razor
@@ -58,11 +58,18 @@
 <p>
     Stay updated on the latest event news and announcements by following us on social media:
 </p>
-<button class="btn btn-primary">Facebook</button>
-<button class="btn btn-primary">Twitter</button>
-<button class="btn btn-primary">TikTok</button>
-<button class="btn btn-primary">Instagram</button>
+<button class="btn btn-primary" onclick="redirectToTwitter()">Twitter</button>
+<button class="btn btn-primary" onclick="redirectToInstagram()">Instagram</button>
 
+<script>
+    function redirectToTwitter() {
+        window.location.href = 'https://twitter.com/CJTechShow';
+    }
+
+    function redirectToInstagram() {
+        window.location.href = 'https://www.instagram.com/cjtechshow/';
+    }
+</script>
 <br />
 
 <p>
