--- a/CJTechShow/Client/Pages/EventInfo.razor
+++ b/CJTechShow/Client/Pages/EventInfo.razor
@@ -3,6 +3,18 @@
 @inject IJSRuntime js
 @attribute [Authorize]
 
+
+<style>
+    h2,h4 {
+        font-weight: bold;
+        text-decoration: underline;
+    }
+
+    h3 {
+        font-weight: bold;
+    }
+</style>
+
 <h3 class="card-title">Event Information</h3>
 
 <!-- Add spacing between sections -->
@@ -16,7 +28,7 @@
 <!-- Event Details -->
 <h4>Event Details</h4>
 <ul>
-    <li>Date: 11, 12, 13 November 2023</li>
+    <li>Date: 11, 12, 13 November 2024</li>
     <li>Time: 3pm</li>
     <li>Venue: Suntec City Convention Centre, Suntec</li>
 </ul>
