--- a/CJTechShow/Client/Pages/AboutUs.razor
+++ b/CJTechShow/Client/Pages/AboutUs.razor
@@ -1,6 +1,14 @@
 ﻿@page "/About Us/"
 @inject HttpClient _client
 @attribute [Authorize]
+
+<style>
+    h3 {
+        font-weight: bold;
+        text-decoration: underline;
+    }
+</style>
+
 <div>
     <h3 class="card-title">Company Story</h3>
     <p>
