--- a/CJTechShow/Client/Pages/Sponsor.razor
+++ b/CJTechShow/Client/Pages/Sponsor.razor
@@ -2,7 +2,13 @@
 @inject HttpClient _client
 @attribute [Authorize]
 
+
 <style>
+
+    h3 {
+        font-weight: bold;
+    }
+
     .sponsors-title {
         font-family: 'Your-Desired-Font', sans-serif; /* Specify your desired font */
     }
