--- a/CJTechShow/Client/Pages/BuyVendorPasses.razor
+++ b/CJTechShow/Client/Pages/BuyVendorPasses.razor
@@ -1,4 +1,4 @@
-﻿<!-- BuyVendorTicket.razor -->
+﻿﻿<!-- BuyVendorTicket.razor -->
 @page "/BuyVendorTicket"
 <PageTitle>Buy Vendor Tickets</PageTitle>
 
@@ -114,7 +114,6 @@
             </div>
         </div>
 
-        <button onclick="window.location.href = 'https://localhost:7084/PurchaseOverview';">Purchased Now!</button>
+        <button onclick="window.location.href = 'https://localhost:44305/PurchaseOverview';">Purchased Now!</button>
     </form>
 </div>
-
