--- a/CJTechShow/Client/Pages/EventInfo.razor
+++ b/CJTechShow/Client/Pages/EventInfo.razor
@@ -1,4 +1,4 @@
-﻿@page "/eventinformation/"
+﻿@page "/event information/"
 @inject HttpClient _client
 @inject IJSRuntime js
 @attribute [Authorize]
@@ -52,6 +52,8 @@
     Stay updated on the latest event news and announcements by following us on social media:
 </p>
 <button class="btn btn-primary" onclick="redirectToTwitter()">Twitter</button>
+<button class="btn btn-primary" onclick="redirectToInstagram()">Instagram</button>
+<button class="btn btn-primary" onclick="redirectToTikTok()">TikTok</button>
 <button class="btn btn-primary" onclick="redirectToInstagram()">Instagram</button>
 
 <script>
