--- a/CJTechShow/Client/Pages/HomePage.razor
+++ b/CJTechShow/Client/Pages/HomePage.razor
@@ -32,9 +32,12 @@
 
 The TECH Show 2023 is back! With more than 150 brands ranging from tech gadgets, smart-home must-haves & lifestyle products,
 get ready to unlock unbelievable 11.11 deals offline where you can touch, feel & get expert advice live in person.yes
-
+<div>
+<p>
 <Ebrochure Title="Download your E-Brochure Now!" />
-
+        <a href="https://drive.google.com/file/d/1mQp0hx8JH7mrlxgRhq-ru7IZfLal7w8u/view?usp=sharing">View Brochure</a>
+</p>
+</div>
 <h2 class="pass-info">Visitor Passes</h2>
 <p class="pass-info">
     Visitor passes cost $100 and include:
@@ -59,6 +62,6 @@ get ready to unlock unbelievable 11.11 deals offline where you can touch, feel &
 
 <!-- "Buy Tickets" button -->
 
-<button onclick="window.location.href = 'https://localhost:7084/BuyVendorTicket';">Buy Vendor Passes</button>
-<button onclick="window.location.href = 'https://localhost:7084/BuyTicket';">Buy Visitor Passes</button>
+<button onclick="window.location.href = 'https://localhost:44305/BuyVendorTicket';">Buy Vendor Passes</button>
+<button onclick="window.location.href = 'https://localhost:44305    /BuyTicket';">Buy Visitor Passes</button>
 
